# KAME

./: .autoconf_trace  .cdtproject  .cproject  .cvsignore  .gdbinit  .gitattributes  .gitignore  .project  AUTHORS  CLAUDE.md  CMakeLists.txt  ChangeLog  INSTALL  INSTALL.fedora  INSTALL.fedora10  INSTALL.fedora13  INSTALL.fedora14  INSTALL.fedora6  INSTALL.fedora8  INSTALL.fedora9  INSTALL.macosx  INSTALL.nidaqmx.fedora10  INSTALL.nidaqmx.fedora14  INSTALL.nidaqmx.fedora15  INSTALL.nidaqmx.fedora6  INSTALL.nidaqmx.fedora9  INSTALL.win32  Info.plist  KAME_BugCheck_Report.docx  LARGE_RECYCLE_DESIGN.md  LICENSE  MACOS_MADVISE_STRADDLE_CRASH.md  Makefile.am  Makefile.in  Portfile  README  README.md  TODO  acinclude.m4  aclocal.m4  (+23 more)
kame/: CMakeLists.txt  Makefile.am  Makefile.in  Messages.sh  allocator.cpp  allocator.h  allocator_prv.h  atomic.h  atomic_list.h  atomic_prv_basic.h  atomic_prv_mfence.h  atomic_prv_mfence_arm8.h  atomic_prv_mfence_x86.h  atomic_prv_ppc.h  atomic_prv_std.h  atomic_prv_x86.h  atomic_queue.h  atomic_smart_ptr.h  kame.cpp  kame.desktop  kame.h  kame.icns  kame.pro  kame.qrc  libkame.pro  main.cpp  measure.cpp  measure.h  messagebox.cpp  messagebox.h  pthreadlock.h  rwlock.cpp  rwlock.h  spinlock.h  support.cpp  support.h  support_osx.h  support_osx.m  support_osx.mm  thread.cpp  (+29 more)
kame/Measurements/: CMakeLists.txt  CryoConcept127.mes  HighTempRes.mes  Makefile  Makefile.am  Makefile.in  NMR-kobo033-2.mes  NMR-kobo033-3.mes  NMR-kobo033.mes  NetworkAnalizer.mes  SR830.mes  new_thermometer_cryoconcept_mix.kam  new_thermometer_cryoconcept_still.kam  new_thermometer_saan_mix.kam  new_thermometer_sample.kam  new_thermometer_si_leiden_stage.kam  nmrstandard.kam  testdriver.kam  thermometers.kam
kame/Scripts/: 4wiredres.seq  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  fieldsweep-030808-01.seq  fieldsweep-040620-01.seq  fieldsweep.seq  new_thermometer_cernox_to_lakeshore340.seq  tempsweep-030526-02.seq  tempsweep-030527-01.seq  test.seq  thermometer-calibration-20030828.seq
kame/analyzer/: CMakeLists.txt  Makefile.am  Makefile.in  analyzer.cpp  analyzer.h  entrylistconnector.cpp  entrylistconnector.h  graphlistconnector.cpp  graphlistconnector.h  recorder.cpp  recorder.h  recordreader.cpp  recordreader.h  recordreaderconnector.cpp  recordreaderconnector.h
kame/driver/: CMakeLists.txt  Makefile.am  Makefile.in  chardevicedriver.h  charinterface.cpp  charinterface.h  comediinterface.cpp  comediinterface.h  driver.cpp  driver.h  driverlistconnector.cpp  driverlistconnector.h  dummydriver.h  dummyport.cpp  dummyport.h  gpib.cpp  gpib.h  interface.cpp  interface.h  interfacelistconnector.cpp  interfacelistconnector.h  nidaqmxdriver.cpp  nidaqmxdriver.h  oxford.cpp  oxford.h  oxforddriver.cpp  oxforddriver.h  primarydriver.cpp  primarydriver.h  primarydriverwiththread.h  pythondriver.h  secondarydriver.cpp  secondarydriver.h  secondarydriverinterface.h  serial.cpp  serial.h  softtrigger.cpp  softtrigger.h
kame/forms/: CMakeLists.txt  Makefile.am  Makefile.in  calibentryconnector.cpp  calibentryconnector.h  caltableform.ui  drivercreate.ui  driverlistconnector.cpp  driverlistconnector.h  drivertool.ui  entrylistconnector.cpp  entrylistconnector.h  graphlistconnector.cpp  graphlistconnector.h  graphtool.ui  interfacelistconnector.cpp  interfacelistconnector.h  interfacetool.ui  messageform.ui  nodebrowser.cpp  nodebrowser.h  nodebrowserform.ui  recordreaderconnector.cpp  recordreaderconnector.h  recordreaderform.ui  rubythreadtool.ui  scalarentrytool.ui  scriptingthreadtool.ui
kame/graph/: CMakeLists.txt  Makefile.am  Makefile.in  graph.cpp  graph.h  graphdialog.ui  graphdialogconnector.cpp  graphdialogconnector.h  graphform.ui  graphmathfittool.h  graphmathtool.cpp  graphmathtool.h  graphmathtoolconnector.cpp  graphmathtoolconnector.h  graphntoolbox.cpp  graphntoolbox.h  graphnurlform.ui  graphpainter.cpp  graphpainter.h  graphpaintergl.cpp  graphwidget.cpp  graphwidget.h  onscreenobject.cpp  onscreenobject.h  x2dimage.cpp  x2dimage.h  xwavengraph.cpp  xwavengraph.h
kame/icons/: CMakeLists.txt  Makefile.am  Makefile.in  gear2.xcf  icon.cpp  icon.h  kame-24x24-png.c  kame-close-48x48-png.c  kame-error-48x48.xcf  kame-graph-256x256.xcf  kame-graph-48x48-png.c  kame-reader-48x48-png.c  kame-reader-48x48.xcf  kame-scalar-256x256.xcf  kame-stop-256x256.xcf  kame-stop-48x48-png.c  (+1 more)
kamepoolalloc/: CMakeLists.txt  LARGE_RECYCLE_DESIGN.md  ORPHAN_REUSE_HANDOFF.md  README.md  allocator.cpp  allocator.h  allocator_prv.h  atomic_mfence.h  atomic_prv_mfence.h  atomic_prv_mfence_arm8.h  atomic_prv_mfence_x86.h  atomic_smart_ptr.h  kame_pool.h  kamepoolalloc.pro
kamestm/: CMakeLists.txt  LICENSE  README.md  atomic.h  atomic_mfence.h  atomic_prv_basic.h  atomic_prv_std.h  atomic_queue.h  atomic_smart_ptr.h  fast_vector.h  kamestm.pro  support.h  threadlocal.cpp  threadlocal.h  transaction.h  transaction_definitions.h  transaction_detail.h  transaction_impl.h  transaction_neg_impl.h  transaction_negotiation.h  transaction_signal.h  xthread.cpp  xthread.h  xtime.cpp  xtime.h  xwaitcell.h
modules/: CMakeLists.txt  Makefile.am  Makefile.in  modules-shared.pri  modules.pri  modules.pro
tests/: .gdb_history  .qmake.stash  CHUNK_CLAIM_TLA_NOTES.md  CMakeLists.txt  Makefile  Makefile.tests  VERIFICATION.md  alloc_bucket34_repro.cpp  alloc_evict_test.cpp  alloc_madvise_straddle_repro.cpp  alloc_minimal_bench.cpp  alloc_realtime_mode_test.cpp  alloc_stats_test.cpp  alloc_stress_test.cpp  alloc_stress_test.pro  alloc_thread_churn_test.cpp  alloc_thread_exit_free_test.cpp  alloc_tune_report.cpp  allocator.cpp  allocator.h  allocator_test.cpp  allocator_test.pro  atomic_intrusive_chain_test.cpp  atomic_intrusive_dll_test.cpp  atomic_queue_test.cpp  atomic_queue_test.pro  atomic_scoped_ptr_test.cpp  atomic_scoped_ptr_test.pro  atomic_shared_ptr_test  atomic_shared_ptr_test.cpp  atomic_shared_ptr_test.pro  c_api_test.c  malloc_intercept_test.c  malloc_intercept_test.cpp  malloc_intercept_test.pro  monitor.h  mutex_test.cpp  mutex_test.pro  nidaqmx_cont_co_test.cpp  nmrmem.h  (+32 more)
(+6123 files in other folders)
